# Project-Ernevil

./: .gitignore  README.md  Rapport.tex  main.py  ml_training.ipynb  pyproject.toml
agent/: agent.py  agentdata.json  cert.pem  computerinfo.py  schemas.py  serverdata.json  test.py
agent/collectors/: computer_info.py
agent/utils/: alert_handler.py  cmpDt.py  cmpRef.py  commands_websocket.py  fingerprint.py  heart.py  initializer.py  updater.py  usb_monitor.py  websocket_agent.py  websockets_init.py
agent/utils/ml_ids/: netsniffer.py  start_ids.py
cert/: gencert.py  key.pem  openssl.cnf  server.key
database/: notifications.json
frontend/: app.py
server/: auth.py  config.py  main.py  schemas.py
server/database/: data.db  data.sqbpro  db.py  dbschema.py  notifications.json
server/frontend/: app.py  server.crt
server/frontend/.streamlit/: config.toml
server/frontend/components/: alerts_ws.py  websocket_init.py
server/frontend/pages/: addlocations.py  blacklist.py  keygen.py  listcomputers.py  listdev.py  listlocations.py  login.py  monitor.py  monitorcomputers.py  netalerts.py  overview_page.py  overviewpage.py
server/routers/: add_resources.py  computers.py  create_computers.py  delete_resources.py  executors.py  get_computers.py  get_resources.py  heartbeats.py  locations.py  refresh_computers.py  update_resources.py  users_routes.py  websocket.py
server/schemas/: add_rs_schema.py  authentication.py  computer.py  executors_schemas.py  locations.py  refresh.py  remove_rs_schema.py  update_rs_schema.py  users_schema.py
server/scripts/: Windows_Setup.bat
server/utils/: connection_manager.py  expire_agents.py  fingerprint.py  heartbeat_utils.py
