[project]
name = "Ernevil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all,standard]>=0.136.1",
    "ifaddr>=0.2.0",
    "psutil>=7.2.2",
    "py-machineid>=1.0.0",
    "pymongo[srv]>=4.17.0",
    "requests>=2.33.1",
    "smartie>=4.0.4",
    "st-pages>=1.0.1",
    "streamlit>=1.57.0",
    "streamlit-code-editor>=0.1.22",
    "streamlit-extras>=1.5.0",
    "streamlit-shadcn-ui>=0.1.19",
]
