[project]
name = "Ernevil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi[all,standard]>=0.136.1",
    "getmac>=0.9.5",
    "ifaddr>=0.2.0",
    "psutil>=7.2.2",
    "py-machineid>=1.0.0",
    "pyusb>=1.3.1",
    "requests>=2.33.1",
    "smartie>=4.0.4",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-json>=0.7.0",
    "st-pages>=1.0.1",
    "streamlit>=1.57.0",
    "streamlit-aggrid>=1.2.1.post2",
    "streamlit-code-editor>=0.1.22",
    "streamlit-extras>=1.5.0",
    "streamlit-shadcn-ui>=0.1.19",
    "tinydb>=4.8.2",
    "usb-monitor>=1.23",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]
